<resources>
    <string name="app_name" translatable="false">Free Chat</string>
    <string name="action_settings">Settings</string>

    <string name="app_id">535786719921087</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_fb">Log in via facebook</string>
    <string name="login_g_plus">Log in via Google</string>
    <string name="title_activity_main" translatable="false">Free Chat</string>

    <string name="my_chats">My chats</string>
    <string name="recent">Recent chats</string>
    <string name="popular">Popular chats</string>
    <string name="add">Create new chat</string>
    <string name="acc">Accounts</string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="logout">Log Out</string>
</resources>
