<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_chats"
            android:icon="@drawable/ic_my_chats"
            android:title="@string/my_chats" />
        <item
            android:id="@+id/recent_chats"
            android:icon="@drawable/ic_recents"
            android:title="@string/recent" />
        <item
            android:id="@+id/popular_chats"
            android:icon="@drawable/ic_popular"
            android:title="@string/popular" />
        <item
            android:id="@+id/create_new"
            android:icon="@drawable/ic_action_add"
            android:title="@string/add" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/add_acc"
            android:icon="@drawable/ic_add_account"
            android:title="@string/acc" />
    </group>

</menu>
