<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mamay.freechat.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/login_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">

        <com.mamay.freechat.view.LoginButtonMergedView xmlns:mamay="http://schemas.android.com/apk/res/com.mamay.freechat"
            android:id="@+id/login_via_fb"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            mamay:loginBackgroundColor="@color/com_facebook_blue"
            mamay:loginIcon="@drawable/facebook_logo"
            mamay:loginText="@string/login_fb" />

        <com.mamay.freechat.view.LoginButtonMergedView xmlns:mamay="http://schemas.android.com/apk/res/com.mamay.freechat"
            android:id="@+id/login_via_google"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            mamay:loginBackgroundColor="@color/google_red"
            mamay:loginIcon="@drawable/google_plus_logo"
            mamay:loginText="@string/login_g_plus" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:text="@string/logout"
            android:textColor="?attr/colorAccent" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_buttons"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_with"
        android:textSize="18sp" />

</RelativeLayout>
